# ckb-dev-skills

./: .cspell.json  .gitignore  .lychee.toml  LICENSE  Makefile  README.md  gemini-extension.json  install.sh
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/: brainstorm.md  ckb-dapp.md  ckb-fiber.md  contract-design.md
.codex/: INSTALL.md
.cursor-plugin/: plugin.json
.github/agents/: ckb-contract.agent.md  ckb-core.agent.md  ckb-dev-lead.agent.md
.github/workflows/: docs-checks.yml
.opencode/: INSTALL.md
agents/ckb-contract/: SKILL.md  debugging.md  design-patterns.md  ecosystem-scripts.md  token-standards.md
agents/ckb-core/: SKILL.md  cell-model.md  transaction.md
agents/ckb-dapp/: SKILL.md  wallet-integration.md
agents/ckb-dev-lead/: SKILL.md
agents/ckb-fiber/: SKILL.md
commands/: brainstorm.md  ckb-contract.md  ckb-core.md  ckb-dapp.md  ckb-dev-lead.md  ckb-fiber.md  contract-design.md
contracts-red-packet/: Cargo.toml  README.md
contracts-red-packet/contracts/red-packet-lock/: Cargo.toml  README.md
contracts-red-packet/contracts/red-packet-lock/src/: main.rs
contracts-red-packet/tests/: Cargo.toml
frontend-red-packet/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json
skill/: SKILL.md  ccc-sdk.md  cell-model.md  ckb-vm.md  debugging.md  deployment.md  ecosystem-scripts.md  fiber-network.md  other-languages.md  resources.md  rust-setup.md  script.md  security.md  testing.md  token-standards.md  transaction-patterns.md  transaction.md  writing-scripts-rust.md  writing-scripts.md
(+21 files in other folders)
